[package]
name = "kaboom"
version = "0.1.0"
authors = ["Benjamin Falk <benjamin.falk@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
clap = "3.0.0-beta.1"
glib = "0.10.0"
gdk = "0.13.0"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = "0.9.0"
features = ["v2_44"]
