[package]
name = "kaboom"
version = "0.1.0"
authors = ["Benjamin Falk <benjamin.falk@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
clap = "3.0.0-beta.1"
rust-embed="5.6"

[dependencies.tetra]
version = "0.4"
features = ["sdl2_bundled", "sdl2_static_link"]
